--- a/miniproject2_0.19.vuerd.json
+++ b/miniproject2_0.19.vuerd.json
@@ -3,8 +3,8 @@
     "version": "2.2.11",
     "width": 3000,
     "height": 3000,
-    "scrollTop": -417.66667097144614,
-    "scrollLeft": -720,
+    "scrollTop": -63.500018378097806,
+    "scrollLeft": -140.8333277371197,
     "zoomLevel": 1,
     "show": {
       "tableComment": true,
