--- a/src/main/resources/static/erd/miniproject2_0.22.vuerd.json
+++ b/src/main/resources/static/erd/miniproject2_0.22.vuerd.json
@@ -3,9 +3,9 @@
     "version": "2.2.11",
     "width": 3000,
     "height": 3000,
-    "scrollTop": -753.4999788403522,
-    "scrollLeft": -615.5000231464699,
-    "zoomLevel": 0.8,
+    "scrollTop": -251,
+    "scrollLeft": -1527,
+    "zoomLevel": 1,
     "show": {
       "tableComment": true,
       "columnComment": true,
@@ -1777,229 +1777,6 @@
         "id": "3e83418e-7afb-4929-a837-6c302d7778b5"
       },
       {
-        "name": "purchase_address",
-        "comment": "공구주문 주소(보관소)",
-        "columns": [
-          {
-            "name": "no",
-            "comment": "시퀀스",
-            "dataType": "NUMBER",
-            "default": "seq_Paddress_no.nextval",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 60,
-              "widthDefault": 144.6826171875
-            },
-            "id": "8decc6fa-6c93-43db-a34d-81f6c27950d4"
-          },
-          {
-            "name": "postcode",
-            "comment": "우편번호",
-            "dataType": "VARCHAR2(10)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 89.29296875,
-              "widthDefault": 60
-            },
-            "id": "562031d7-6a1b-4b84-83bc-41dcd8655ec3"
-          },
-          {
-            "name": "address1",
-            "comment": "주소",
-            "dataType": "VARCHAR2(200)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 96.453125,
-              "widthDefault": 60
-            },
-            "id": "6ae9559b-a5da-491b-a462-20f95177565c"
-          },
-          {
-            "name": "address2",
-            "comment": "상세주소",
-            "dataType": "VARCHAR2(200)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 96.453125,
-              "widthDefault": 60
-            },
-            "id": "3ffb8a76-e6b6-49bd-9502-4bacaf016e4d"
-          },
-          {
-            "name": "address3",
-            "comment": "참고항목",
-            "dataType": "VARCHAR2(200)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 96.453125,
-              "widthDefault": 60
-            },
-            "id": "30dac2b7-806b-4608-9691-240ae4c9eaee"
-          },
-          {
-            "name": "purchaseNo",
-            "comment": "공구주문번호",
-            "dataType": "NUMBER",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": true
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 72.484375,
-              "widthComment": 80,
-              "widthDataType": 60,
-              "widthDefault": 60
-            },
-            "id": "7b7e5815-59f5-4a39-adae-3913e1d336e2"
-          },
-          {
-            "name": "latitude",
-            "comment": "위도",
-            "dataType": "NUMBER(17,14)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 94.64404296875,
-              "widthDefault": 60
-            },
-            "id": "7c8f146c-7a26-4b07-a6b8-88c609d85ace"
-          },
-          {
-            "name": "longitude",
-            "comment": "경도",
-            "dataType": "NUMBER(17,14)",
-            "default": "",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 94.64404296875,
-              "widthDefault": 60
-            },
-            "id": "5ca71d1c-a3eb-4c1e-8865-d2336241f91f"
-          },
-          {
-            "name": "regdate",
-            "comment": "등록일자",
-            "dataType": "TIMESTAMP",
-            "default": "CURRENT_TIMESTAMP",
-            "option": {
-              "autoIncrement": false,
-              "primaryKey": false,
-              "unique": false,
-              "notNull": false
-            },
-            "ui": {
-              "active": false,
-              "pk": false,
-              "fk": false,
-              "pfk": false,
-              "widthName": 60,
-              "widthComment": 60,
-              "widthDataType": 71.93212890625,
-              "widthDefault": 134.31689453125
-            },
-            "id": "db9ccc8b-14ea-4efa-86d9-7899366ce136"
-          }
-        ],
-        "ui": {
-          "active": false,
-          "left": 2487.12255859375,
-          "top": 0,
-          "zIndex": 6,
-          "widthName": 105.3271484375,
-          "widthComment": 120
-        },
-        "visible": true,
-        "id": "1583a02f-5992-4575-8ff3-087ec6ed8a00"
-      },
-      {
         "name": "admin",
         "comment": "관리자",
         "columns": [
@@ -2431,9 +2208,9 @@
         ],
         "ui": {
           "active": false,
-          "left": 921.2316,
-          "top": 1235.4953,
-          "zIndex": 18,
+          "left": 941.2315,
+          "top": 1272.1623,
+          "zIndex": 19,
           "widthName": 60,
           "widthComment": 60,
           "color": "#607D8B"
@@ -3289,8 +3066,8 @@
           "columnIds": [
             "b90d5648-ceed-4558-b006-306cc0e99fe0"
           ],
-          "x": 1109.378084375,
-          "y": 1235.4953,
+          "x": 1129.3779843749999,
+          "y": 1272.1623,
           "direction": "top"
         },
         "end": {
